<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Signer</string>
    <string name="intro_subtitle">The storage place for your keys to sign transactions in Tonkeeper.</string>
    <string name="new_key">Create New Key</string>
    <string name="import_key">Import Existing Key</string>
    <string name="create_password">Create Password</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="paste">Paste</string>
    <string name="done">Done</string>
    <string name="continue_text">Continue</string>
    <string name="name_your_key">Name Your Key</string>
    <string name="name_your_key_subtitle">It will simplify the search for the necessary key in the list of keys.</string>
    <string name="name">Name</string>
    <string name="scan">Scan</string>
    <string name="change_password">Change password</string>
    <string name="enter_current_password">Enter current password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="password_changed">Password changed</string>
    <string name="add_key">Add key</string>
    <string name="settings">Settings</string>
    <string name="key_export_qr_title">Export to another device</string>
    <string name="key_export_qr_subtitle">Open Tonkeeper » Import Existing Wallet » Pair Signer</string>

    <string name="add_key_subtitle">Create a new key or add an existing one.</string>

    <string name="key_export_local_title">Export to Tonkeeper on this device</string>
    <string name="key_export_local_subtitle">Tonkeeper must be installed</string>

    <string name="hex_address">Hex address</string>
    <string name="recover_phrase">Recovery phrase</string>
    <string name="delete_key">Delete key</string>
    <string name="copied">Copied</string>
    <string name="copy">Copy</string>
    <string name="delete_key_question">Delete key?</string>
    <string name="delete_key_question_subtitle">This will erase keys to the wallet. Make sure you have backed up your secret recovery phrase.</string>
    <string name="sign_transaction">Sign transaction</string>
    <string name="audit_transaction">Audit transaction</string>
    <string name="slide_to_sign">Slide to sign</string>
    <string name="unknown">Unknown</string>
    <string name="emulate">Emulate in browser</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="scan_qr_code">Scan QR code</string>
    <string name="scan_qr_code_subtitle">From Tonkeeper on the action confirmation page</string>
    <string name="qr_sign_title">Scan the QR code with Tonkeeper</string>
    <string name="qr_sign_subtitle">After scanning, the transaction will be sent to the network.</string>
    <string name="recovery_phrase">Recovery Phrase</string>
    <string name="signed_transaction">Signed Transaction</string>
    <string name="support">Support</string>
    <string name="send">Send</string>
    <string name="version">Version %1$s</string>
    <string name="recovery_phrase_subtitle">Keep your seed phrase in secure location. Do not enter it into unknown apps.</string>

    <string name="enter_recovery_phrase">Enter Recovery Phrase</string>
    <string name="enter_recovery_phrase_subtitle">When you created this wallet, you got a 24-word recovery phrase. Enter it to restore access to your wallet.</string>
</resources>