<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/offsetLarge"
            android:orientation="vertical">

            <uikit.widget.TextHeaderView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:title="@string/enter_recovery_phrase"
                android:description="@string/enter_recovery_phrase_subtitle"/>

            <uikit.widget.WordFormView
                android:id="@+id/word_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/offsetLarge"/>

            <Button
                style="@style/Widget.App.Button"
                android:id="@+id/next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.Label1"
                android:enabled="false"
                android:text="@string/continue_text"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/paste"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_margin="@dimen/offsetMedium"
        android:paddingHorizontal="24dp"
        android:paddingVertical="14dp"
        android:text="@string/paste"
        android:background="@drawable/bg_content_tint_24"
        android:textAppearance="@style/TextAppearance.Label2"
        android:textColor="@color/textPrimary"/>

</FrameLayout>