<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:src="@drawable/bg_intro"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/offsetMedium">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.H2"
            android:textColor="@color/textPrimary"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/intro_subtitle"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.Body1"
            android:textColor="@color/textSecondary"/>

        <Button
            style="@style/Widget.App.Button"
            android:id="@+id/new_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/offsetLarge"
            android:textAppearance="@style/TextAppearance.Label1"
            android:text="@string/new_key"/>

        <Button
            style="@style/Widget.App.Button.Secondary"
            android:id="@+id/import_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/offsetMedium"
            android:textAppearance="@style/TextAppearance.Label1"
            android:text="@string/import_key"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>